[workspace]
resolver = "3"
members = [
  ".",
  "xtask",
  "examples/display-a-map",
  "examples/display-a-map-with-html-container",
  "examples/display-non-interactive-map",
  "examples/display-a-satellite-map",
]

[package]
name = "maplibre-gl-js"
version = "0.0.1"
edition = "2024"
description = "Unofficial MapLibre GL JS Rust bindings"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["wasm", "maplibre-gl-js"]
categories = ["wasm", "web-programming"]
repository = "https://github.com/RabadanDotDev/maplibre-gl-js-rs"
homepage = "https://rabadandotdev.github.io/maplibre-gl-js-rs/"

[dependencies]
paste = "1.0.15"
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.146"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["HtmlElement"] }

[dev-dependencies]
wasm-bindgen-futures = "0.4.55"
wasm-bindgen-test = "0.3.55"
web-sys = { version = "0.3.82", features = ["Document", "HtmlHeadElement", "HtmlScriptElement", "Window", "console"] }
